tests/errors/erro_const_reassign.lua
function void main()
    const PI : number = 3.14;
    PI = 3.14159; -- Erro: reatribuição de constante
end
